# small-bwt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs  english.10MB.zst
src/: lib.rs  radixsort.rs
tools/: Cargo.toml
tools/src/: bwt.rs  decode.rs  main.rs
