[package]
name = "tools"
version = "0.1.0"
edition = "2021"
default-run = "bwt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
small-bwt = { path = ".." }

[[bin]]
name = "bwt"
path = "src/bwt.rs"

[[bin]]
name = "decode"
path = "src/decode.rs"
